--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "cc-bangkit-dummy",
+  "name": "exploria",
   "version": "1.0.0",
-  "description": "dummy api for bangkit",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fitrahidayaat/cc-bangkit-dummy.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fitrahidayaat/cc-bangkit-dummy/issues"
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.11.30",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   },
-  "homepage": "https://github.com/fitrahidayaat/cc-bangkit-dummy#readme",
   "dependencies": {
-    "express": "^4.21.1"
+    "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.22.0",
+    "zod": "^3.23.8"
   }
 }
