--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "migrate": "npx prisma migrate deploy" ,
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon"
   },
