--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,5 +23,5 @@ steps:
       - '--source'
       - '.'  
 
-  - options:
-    logging: CLOUD_LOGGING_ONLY
+options:
+  logging: CLOUD_LOGGING_ONLY
