--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "migrate": "npx prisma migrate deploy" ,
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon"
+    "start": "npx nodemon",
+    "create-env": "printenv > .env"
   },
   "keywords": [],
   "author": "",
