--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "migrate": "npx prisma migrate deploy" ,
+    "migrate": "npx prisma migrate deploy",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon",
     "create-env": "printenv > .env"
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
