--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.22.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   }
 }
