--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,19 +1,4 @@
 steps:
-  # Install dependencies
-  - name: 'gcr.io/cloud-builders/python'
-    args: ['pip', 'install', '-r', 'requirements.txt']
-    id: 'Install dependencies'
-
-  # Run database migrations (if applicable)
-  - name: 'gcr.io/cloud-builders/python'
-    entrypoint: 'sh'
-    args:
-      - '-c'
-      - |
-        uvicorn api:app --reload
-    id: 'Run FastApi Server'
-
-  # Deploy to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
@@ -24,6 +9,8 @@ steps:
       - '--region'
       - 'asia-southeast2'
       - '--allow-unauthenticated'
+      - '--memory'
+      - '2Gi'
       - '--source'
       - '.'
     id: 'Deploy to Cloud Run'
